railway CMD dockerfile

--- a/backend/project_sap/Dockerfile
+++ b/backend/project_sap/Dockerfile
@@ -24,7 +24,7 @@ COPY . .
 EXPOSE 8000
 
 # Comando para ejecutar migraciones y luego Gunicorn
-CMD ["sh", "-c", "python project_sap/manage.py migrate && gunicorn project_sap.wsgi:application --bind 0.0.0.0:$PORT"]
+CMD sh -c "python project_sap/manage.py migrate && gunicorn project_sap.wsgi:application --bind 0.0.0.0:$PORT"
 
 # Comando para ejecutar Django
 # CMD ["python", "project_sap/manage.py", "runserver", "0.0.0.0:8000"]
